--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,19 +72,22 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+section {
+  margin-top: 130px;
+}
 
 /* about section style */
 .about {
-  margin-top: 130px;
   background: #fff8f3;
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
 }
 .section-title {
+  text-align: center;
   font-weight: 700;
   font-size: 35px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .section-description {
   color: #757575;
@@ -103,4 +106,72 @@ main {
   font-weight: 700;
   font-size: 20px;
   color: #474747;
+}
+/* what i do styles */
+
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+.skill {
+  background: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
+}
+.skill-title {
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.skill-description {
+  color: #757575;
+}
+
+/* Resume styles */
+.resume-content {
+  display: flex;
+  gap: 24px;
+}
+.resume .title {
+  font-weight: 700;
+  font-size: 25px;
+  color: #474747;
+  margin-bottom: 10px;
+}
+.resume .sub-title {
+  color: #757575;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.resume .description {
+  color: #757575;
+}
+.resume-item {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.resume-button {
+  margin-top: 50px;
+  text-align: center;
+}
+/* contact styles */
+.contact {
+  display: flex;
+  gap: 100px;
+  background: #fff8f3;
+  padding: 130px 200px;
+}
+
+.contact .section-title {
+  text-align: left;
+}
+.contact input,
+textarea {
+  margin-bottom: 24px;
+  border: 0;
+  width: 100%;
+  padding: 18px 30px;
 }
